k8strain3/network-网络/traefik/test/http/http-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls-http
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`who.tf.bltest.kutesmart.cn`) && PathPrefix(`/tls`)
    kind: Rule
    services:
    - name: whoami
      port: 80
    # middlewares:   # 配置强制跳转https
    # - name: redirect-https
