k8strain3/network-网络/traefik/test/http/https-ingressrote.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-tls-demo
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`who.tf.bltest.kutesmart.cn`) && PathPrefix(`/tls`)
    kind: Rule
    services:
    - name: whoami
      port: 80
  tls:
    certResolver:
    domains:
    - main: "*.tf.bltest.kutesmart.cn"
