k8strain3/network-网络/traefik/test/http/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware 
metadata:
  name: redirect-https
spec: 
  redirectScheme:    
    scheme: https    #强制跳转https
